# HighFPSRecorder_240fps

./: .gitignore  BUILD_FIXES.md  High-Speed PIV research report.docx  NDK_INTEGRATION_GUIDE.md  RAW_FRAME_CAPTURE_GUIDE.md  README.md  camera_full_report.txt  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  frame_buffer.cpp  frame_buffer.h  frame_processor.cpp  frame_processor.h  native_bridge.cpp  native_bridge.h  stride_corrector.cpp  stride_corrector.h  tiff_encoder.cpp  tiff_encoder.h
app/src/main/java/com/example/highfps/: CameraPreviewView.java  FrameProcessor.java  FrameSaver.java  MainActivity.java  NativeFrameProcessor.java  StorageManager.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
